New index dialog and authentication WIP

--- a/src/assets/i18n/nl.json
+++ b/src/assets/i18n/nl.json
@@ -80,7 +80,7 @@
         "lastAddition": "Laatste toevoeging",
         "indexOwners": "Index eigenaren",
         "loadingIndex": "Index laden",
-        "questions": "Meeste gestelde vragen",
+        "questions": "Meest gestelde vragen",
         "mostIndexedPlayers": "Meest geindexeerde spelers",
         "mostIndexedAlliances": "Meest geindexeerde allianties",
         "indexMoved": "Deze index is door de eigenaar verplaatst! Vraag de oorspronkelijke index eigenaar om de nieuwe code.",
